# puckling

./: .gitignore  LICENSE  PERF_FINDINGS.md  PERF_FINDINGS_ROUND2.md  PERF_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml  python-tests.yml
bench/: __init__.py  __main__.py  compare.py  corpus.py  duckling_compare.py  harness.py  metrics.py  profile.py  report.py
bench/perf-findings/: 01-python-micro-opts.md  03-sub-interpreters-and-free-threading.md  04-rust-feasibility.md  README.md
src/puckling/: __init__.py  api.py  corpus.py  engine.py  locale.py  predicates.py  regex_utils.py  types.py
src/puckling/dimensions/: __init__.py  _registry.py
src/puckling/dimensions/amount_of_money/: __init__.py  types.py
src/puckling/dimensions/amount_of_money/ar/: __init__.py  corpus.py  rules.py
src/puckling/dimensions/amount_of_money/en/: __init__.py  corpus.py  rules.py
src/puckling/dimensions/credit_card/: __init__.py  corpus.py  rules.py  types.py
src/puckling/dimensions/distance/: __init__.py  types.py
src/puckling/dimensions/distance/ar/: __init__.py  corpus.py  rules.py
src/puckling/dimensions/distance/en/: __init__.py  corpus.py  rules.py
src/puckling/dimensions/duration/: __init__.py  types.py
src/puckling/dimensions/email/: __init__.py  corpus.py  extra_corpus.py  rules.py  types.py
src/puckling/dimensions/numeral/: __init__.py  helpers.py  types.py
src/puckling/dimensions/ordinal/: __init__.py  types.py
src/puckling/dimensions/phone_number/: __init__.py  types.py
src/puckling/dimensions/quantity/: __init__.py  types.py
src/puckling/dimensions/temperature/: __init__.py  types.py
src/puckling/dimensions/time/: __init__.py  computed.py  grain.py  helpers.py  holiday_helpers.py  types.py
src/puckling/dimensions/url/: __init__.py  corpus.py  rules.py  types.py
src/puckling/dimensions/volume/: __init__.py  types.py
tests/: __init__.py  conftest.py  test_api.py  test_boundary_conditions.py  test_compound_inputs.py  test_engine.py  test_fuzzy_exploration.py  test_negative_corpus.py  test_review_regressions.py  test_runtime_values.py  test_saturation_regression.py  test_time_resolution.py  value_helpers.py
tests/dimensions/: test_amount_of_money_ar.py  test_amount_of_money_en.py  test_credit_card.py  test_distance_ar.py  test_distance_en.py  test_duration_ar.py  test_duration_en.py  test_email.py  test_email_extra.py  test_numeral_ar.py  test_numeral_en.py  test_numeral_en_extra.py  test_ordinal_ar.py  test_ordinal_en.py  test_phone_number_ar.py  test_phone_number_en.py  test_quantity_ar.py  test_quantity_en.py  test_temperature_ar.py  test_temperature_en.py  test_time_ar.py  test_time_ar_clock.py  test_time_ar_holidays.py  test_time_ar_intervals.py  test_time_en.py  test_time_en_clock.py  test_time_en_dates.py  test_time_en_holidays.py  test_time_en_intervals.py  test_time_en_relative.py  test_url.py  test_volume_ar.py  test_volume_en.py
tests/parity/: test_duckling_gap_xfails.py
(+67 files in other folders)
