[project]
name = "puckling"
version = "0.1.0"
description = "A Python port of Facebook's Duckling: parse natural-language English and Arabic into structured numbers, dates, durations, money, and more."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
keywords = ["nlp", "parsing", "duckling", "arabic", "english", "dates", "numbers"]
authors = [{ name = "Puckling contributors" }]
dependencies = [
    "regex>=2024.5.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[project.urls]
Homepage = "https://github.com/mazyod/puckling"
Repository = "https://github.com/mazyod/puckling"
Documentation = "https://github.com/mazyod/puckling"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/puckling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["error"]
# Hard per-test wall-clock cap. Without this, a runaway parse (engine token
# saturation) can wedge a test indefinitely. Override per-test with
# `@pytest.mark.timeout(N)` when needed.
#
# `signal` method uses SIGALRM to interrupt a stuck test and fail it cleanly,
# leaving the rest of the suite to run. The alternative `thread` method only
# sets a flag the test loop never checks, then calls `os._exit(1)` — which
# kills the entire pytest process, not just the bad test. POSIX-only.
timeout = 5
timeout_method = "signal"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.13"
include = ["src", "tests"]
typeCheckingMode = "standard"
